# Kasboek_latent_space

./: .gitignore  README.md  Rorschach_Interpretations_English.xlsx  apply_filters_v2.py  chat.py  config.py  data_exporter.py  describe_webcam.py  eye_calibration.json  eye_tracking.py  eye_tracking2.py  eye_visualizer.py  filer_test.py  gaze_collector.py  index.html  llm_client.py  main.py  main_pipeline.py  old_index.html  poem_generation_pipeline.py  poem_orchestrator.py  print_formatter.py  prompt_builder.py  psychic-yew-477409-d1-13d79b99276c.json  pyproject.toml  requirements.txt  rorschach_interpreter.py  rt_obj_detection.py  rt_transcription.py  run_complete_system.py  run_system.py  server.py  setup_and_test.py  tts.py  tts_generator.py  visual_display.py  visual_display_system.py
OLD_Pipeline_DECISION_TO_BE_MADE/: .gitignore  requirements-jetson.txt
OLD_Pipeline_DECISION_TO_BE_MADE/eye_tracker/: CODE_DOCUMENTATION.md  USER_MANUAL.md  main.py  tracking.py
analysis_watcher/: heatmap.py  requirements.txt  run_analysis_watcher.py  tts.py  tts_el.py  tts_gc.py
eye_tracker/: calibration.py  drawing.py  main.py  tracking.py  utils.py
gaze-painter/: eye_tracking.py  eye_visualizer.py  run_gaze_painter.py  utils.py
image_analysis_pipeline/: chat.py  main.py  requirements.txt
old_code/: apply_filters_v3.py
poem_generator/: README.md  Rorschach_Interpretations_English.xlsx  analyze_eye_tracking_2.py  poem_generator_2.py
resources/: Rorschach_Interpretations_English.xlsx
version0/: filter_chooser.py  main.py  random_filter_chooser.py
(+21 files in other folders)
