[project]
name = "challenges"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "parler-tts>=0.2.3",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "torch>=2.9.0",
    "transformers>=4.46.1",
]
